--- a/.gitignore
+++ b/.gitignore
@@ -83,9 +83,9 @@ com_crashlytics_export_strings.xml
 
 # Ignore paths that contain generated content.
 cache/
-files/
-sites/*/files
-sites/*/private
+#files/
+#sites/*/files
+#sites/*/private
 
 # Ignore default text files
 robots.txt
