--- a/.gitignore
+++ b/.gitignore
@@ -54,8 +54,8 @@ pm_to_blib
 # .idea/workspace.xml
 # .idea/tasks.xml
 # and these sensitive or high-churn files:
-# .idea/dataSources.ids
-# .idea/dataSources.xml
+ .idea/dataSources.ids
+ .idea/dataSources.xml
 # .idea/sqlDataSources.xml
 # .idea/dynamic.xml
 
