Gitignore -- c-files fix

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,12 @@
 *.log
 /**/.saas-cache/*
 
+# Configurations #
+##################
+/**/wp-config.php
+/**/configurations.php
+/**/default/settings.php
+
 # Perl #
 ############
 blib/
